--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -266,7 +266,7 @@
         //DEMO未信箱驗證會員
         //DEMO按鈕
         $('#unverifiedLogin').click(function () {
-            $('#txtEmail').val("ocarina51006@gmail.com");
+            $('#txtEmail').val("allun51006@gmail.com");
             $('#txtPassword').val("aaa1234");
         });
 
