--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/RegisterMember.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/RegisterMember.cshtml
@@ -371,7 +371,7 @@
         $('#registerdemoBTN').click(function () {
             $('#registerNameText').val("安安");
             $('#registerBirthText').val("01/01/1999");
-            $('#emailInput').val("ocarina51006gmail.com")
+            $('#emailInput').val("allun51006gmail.com")
             $('#registerPhoneText').val("1988657812");
             $('#passwordInput').val("aaa1234");
             $('#passwordCheck').val("aaa123");
