更改Demo鍵資料

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -782,10 +782,10 @@
         });
         //新增Demo按鍵
         function setCreateCouponValue() {
-            $('#create-name').val("延遲出貨補償優惠券");
-            $('#create-content').val("補償用的9折折價券");
+            $('#create-name').val("補償優惠券");
+            $('#create-content').val("補償用的7折折價券");
             $('#create-expirydate').val("2023-11-30");
-            $('#create-offer').val("0.9");
+            $('#create-offer').val("0.7");
             $('#create-usable').val("true");
         }
 
