修正轉蛋機率調整動畫結果

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -123,8 +123,9 @@
 <!-- Start 遊戲畫面 -->
 <div class="canvas-container" @*style="display:none;"*@>
     <div id="Probability" style="display:none">
-        <h2 style="text-align:center;">轉蛋機率表(經機率縮放後)</h2>
-        <div id="ItemsProbability" >
+        <h2 style="text-align:center; color:black">轉蛋機率表(經機率縮放後)</h2>
+        <div id="ItemsProbability" style="font-weight:bolder; color:black;
+">
         </div>
 
     </div>
