--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/myCss.css
@@ -159,10 +159,9 @@
     width: 100px;
 }
 
- #getCouponList .coupon-status button:hover 
- {
+    #getCouponList .coupon-status button:hover {
         background-color: #B98046;
- }
+    }
 
 
 #getCouponList .coupon_cancel button {
@@ -381,14 +380,17 @@ background-color:#EDD8C0 ;
 }
 
 .form-control[readonly] {
+    color: #CE0000;
+    font-size: 18px;
+    font-weight: bold;
     background-color: #F8F0E7 !important;
 }
 
 /*MemberLogin頁面logo*/
 .logo-wrapper:hover {
-            transform: scale(1.1); /* 放大 10% */
-            transition: transform 0.3s ease-in-out; /* 添加平滑過渡效果 */
-        }
+    transform: scale(1.1); /* 放大 10% */
+    transition: transform 0.3s ease-in-out; /* 添加平滑過渡效果 */
+}
 
 /*Cart頁面垃圾桶圖樣樣式*/
 .trashBtn {
@@ -397,13 +399,16 @@ background-color:#EDD8C0 ;
     cursor: pointer;
     padding: 0; /* 清除默認的 padding，使按鈕更小 */
 }
-.trashBtn:hover {
-    transform: scale(1.3); /* 放大 10% */
-    transition: transform 0.3s ease-in-out; /* 添加平滑過渡效果 */
-}
+
+    .trashBtn:hover {
+        transform: scale(1.3); /* 放大 10% */
+        transition: transform 0.3s ease-in-out; /* 添加平滑過渡效果 */
+    }
+
 .bi-trash {
     color: #b4793594;
 }
+
 body {
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -418,5 +423,15 @@ body {
 .checkout-inputs {
     background-color: #F8F0E7;
     border: solid #dee2e6;
-    border-radius:5px;
+    border-radius: 5px;
+}
+
+.price-font {
+    color: #CE0000;
+    font-size: 30px !important;
+    font-weight:bold;
+}
+
+.subprice-font {
+    font-size: 22px !important;
 }
