--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -142,9 +142,9 @@
                         <form class="needs-validation">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="useLoyalityPoint">
-                                <label class="custom-control-label" for="useLoyalityPoint" id="loyalityPointBonus">使用 @Model.getCouponPrice.finalBonus 紅利折抵NT @Model.getCouponPrice.finalPrice</label>
+                                <label class="custom-control-label" for="useLoyalityPoint" id="loyalityPointBonus" style="font-size:18px">使用 @Model.getCouponPrice.finalBonus 紅利折抵NT @Model.getCouponPrice.finalPrice</label>
                             </div>
-                            <div class="ml-4 mb-2 small">您有<a class="ml-1 mb-2 small" style="color:#DE9E4F"> @Model.getCouponPrice.firstloyaltyPoints</a> 個紅利，單筆訂單最多可折抵10%商品金額</div>
+                            <div class="ml-4 mb-2">您有<a class="ml-1 mb-2 " style="color:#DE9E4F"> @Model.getCouponPrice.firstloyaltyPoints</a> 個紅利，單筆訂單最多可折抵10%商品金額</div>
                         </form>
                     }
                 </div>
@@ -1224,27 +1224,27 @@
                 <div class="order-box">
                     <div class="d-flex">
                         <h4 class="mr-auto">小計</h4>
-                        <span class="mr-2 font-weight-bold">NT</span><div class=" font-weight-bold" id="subtotal">@ViewBag.totalPrice</div>
+                        <span class="mr-2 font-weight-bold subprice-font">NT</span><div class=" font-weight-bold subprice-font" id="subtotal">@ViewBag.totalPrice</div>
                     </div>
                     @if (Model != null)
                     {
                         <div class="d-flex">
                             <h4 class="mr-auto">紅利折扣</h4>
-                            <span class="mr-2 font-weight-bold">- NT</span><div class=" font-weight-bold" id="loyaltyPointsBonus"> 0 </div>
+                            <span class="mr-2 font-weight-bold subprice-font">- NT</span><div class=" font-weight-bold subprice-font" id="loyaltyPointsBonus"> 0 </div>
                         </div>
                         <hr class="my-1">
                         <div class="d-flex">
                             <h4 class="mr-auto">優惠券折扣</h4>
-                            <span class="mr-2 font-weight-bold">- NT</span><div class=" font-weight-bold" id="couponBonus"> 0 </div>
+                            <span class="mr-2 font-weight-bold subprice-font">- NT</span><div class=" font-weight-bold subprice-font" id="couponBonus"> 0 </div>
                         </div>
                         <div class="d-flex">
                             <h4 class="mr-auto">運費</h4>
-                            <span class="mr-2 font-weight-bold">+ NT</span><div class=" font-weight-bold" id="shippingFee"> @ViewBag.firstFee</div>
+                            <span class="mr-2 font-weight-bold subprice-font">+ NT</span><div class=" font-weight-bold subprice-font" id="shippingFee"> @ViewBag.firstFee</div>
                         </div>
                         <hr>
-                        <div class="d-flex gr-total">
+                        <div class="d-flex gr-total align-items-center">
                             <h5 class="mr-auto">總計</h5>
-                            <span class="mr-2 font-weight-bold" style="color:red">NT</span><div class=" h4" style="color:red" id="allTotalPrice">@ViewBag.firstTotalPrice</div>
+                            <span class="mr-2 font-weight-bold " style="color:#CE0000">NT</span><div class="h3 price-font " id="allTotalPrice">@ViewBag.firstTotalPrice</div>
                         </div>
                         <hr>
                     }
@@ -1253,12 +1253,12 @@
 
 
                 <div class="col-12 d-flex align-items-center ">
-                    <a class="ml-auto mr-2" style="color:#DE9E4F">可獲得的紅利</a>
+                    <a class="ml-auto mr-2" style="color:#DE9E4F;font-size:18px">可獲得的紅利</a>
                     @if (HttpContextAccessor.HttpContext.Session.GetString(CDictionary.SK_PAY_MODEL) != null)
                     {
-                        <a class="mr-2" style="color:#DE9E4F"> @payModel?.getLoyaltyPoints </a>
+                        <a class="mr-2" style="color:#DE9E4F;font-size:18px"> @payModel?.getLoyaltyPoints </a>
                     }
-                    <a class="mr-2" style="color:#DE9E4F">點</a>
+                    <a class="mr-2" style="color:#DE9E4F;font-size:18px">點</a>
                     <button type="submit" id="submit-order-btn"
                             class="checkout-btn btn hvr-hover ">
                         確認訂單
