--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
@@ -473,7 +473,7 @@
                 formData.append("PublishTime", PublishTime);
                 formData.append("PublishEndTime", PublishEndTime);
                 formData.append("PinToTop", PinToTop);
-                formData.append("AnnouncementTypeId", $(TypeEditor).val());
+                formData.append("AnnouncementTypeId", TypeEditor);
                 if (file) {
                     formData.append("ImageHeader", file);
                 }
