※修正checkout、pay頁面的樣式 ●更改login預設帳號為memberID:1208的帳號 (萬一有個意外就用這個~~~)

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -72,13 +72,13 @@
                                     <div>
                                         <label for="txtEmail">電子信箱：</label>
                                         <input type="email" class="form-control" id="txtEmail" name="txtEmail"
-                                           placeholder="email" value="seoari@gmail.com" required>
+                                           placeholder="email" value="ocarina51006@gmail.com" required>
                                         <div class="invalid-feedback"> 請輸入電子信箱</div>
                                     </div>
                                     <div>
                                         <label for="txtPassword">密碼：</label>
                                         <input type="password" class="form-control" id="txtPassword" name="txtPassword"
-                                           placeholder="password" value="a12345" required>
+                                           placeholder="password" value="aaa1234" required>
                                         <div class="invalid-feedback"> 請輸入密碼 </div>
                                     </div>
                                 </div>
