--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1236,9 +1236,9 @@
                         <div class="d-flex">
                             <h4 class="mr-auto">優惠券折扣</h4>
                             <span class="mr-2 font-weight-bold subprice-font">- NT</span><div class=" font-weight-bold subprice-font" id="couponBonus"> 0 </div>
-                        </div>
-                        <div class="d-flex">
-                            <h4 class="mr-auto">運費</h4>
+                        </div> 
+                        <div class="d-flex align-items-center">
+                            <h4 >運費</h4><span class="small mr-auto">(消費金額滿NT2000免運)</span>
                             <span class="mr-2 font-weight-bold subprice-font">+ NT</span><div class=" font-weight-bold subprice-font" id="shippingFee"> @ViewBag.firstFee</div>
                         </div>
                         <hr>
